# ExercisesGenerator

./: Bag.py  Challenge.py  Exercise.py  ExerciseConfig.py  ExerciseController.py  ExerciseGenerator.py  Game.py  Item.py  ItemType.py  MuscularRepetition.py  README.md  setup.cfg
Challenges/: ChallengeConfiguration.json  ChallengeGenerator.py  DifficultyConfiguration.py  __init__.py
Configuration/: ExerciseTimeConfigs.json  Exercises.json  MuscularConfigs.json  __init__.py
Errors/: Errors.py
Exercises/: Exercise.py  ExerciseController.py  ExerciseGenerator.py  __init__.py
Exercises/Configuration/: Exercises.json
Player/: Player.py  Player_Controller.py
src/Exercises/: Exercise.py  ExerciseGenerator.py  ExerciseTimeConfig.py  MuscularRange.py  __init__.py
src/Exercises/Configuration/: Exercises.json  MuscularRepetitionsRanges.json
