[metadata]
name = exercises-generator-pkg
version = 0.0.4
author = Julien Drolet-Noel
author_email = julien.drolet.noel@gmail.com
description = "Exercises generator"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/juliendroletnoel/ExercisesGenerator
project_urls = 
    Bug Tracker = https://github.com/juliendroletnoel/ExercisesGenerator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = > 3

[options.packages.find]
where = src